crates/ruff_python_parser/tests/snapshots/invalid_syntax@return_outside_function.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/return_outside_function.py
---
## AST

```
Module(
    ModModule {
        range: 0..9,
        body: [
            Return(
                StmtReturn {
                    range: 0..8,
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 7..8,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | return 1
  | ^^^^^^^^ Syntax Error: `return` statement outside of a function
  |
